<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.creditmang.CreditMangAddFragment">

    <!--贷款名称-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_small"
            android:text="@string/credit_item_name" />

        <EditText
            android:id="@+id/edtCreditName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margin_small"/>
    </LinearLayout>

    <!--银行-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_small"
            android:text="@string/bank_name" />

        <EditText
            android:id="@+id/edtBankName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margin_small"/>
    </LinearLayout>
    <!--还款日-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_small"
            android:text="@string/repayment_date" />

        <EditText
            android:id="@+id/edtRepaymentDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margin_small"/>
    </LinearLayout>
    <!--每月应还-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_small"
            android:text="@string/repay_month" />

        <EditText
            android:id="@+id/edtRepayMonth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margin_small"/>
    </LinearLayout>
    <!--利率-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_small"
            android:text="@string/interest_rate" />

        <EditText
            android:id="@+id/edtInterestRate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margin_small"/>
    </LinearLayout>
    <!--贷款总额-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_small"
            android:text="@string/credit_item_limit" />

        <EditText
            android:id="@+id/edtCreditItemLimit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margin_small"/>
    </LinearLayout>
    <!--贷款期限(月)-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_small"
            android:text="@string/credit_length" />

        <EditText
            android:id="@+id/edtCreditLength"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margin_small"/>

    </LinearLayout>
    <!--提款日期-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_small"
            android:text="@string/draw_date" />

        <EditText
            android:id="@+id/edtDrawDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margin_small"/>

    </LinearLayout>
    <!--本期截止日-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_small"
            android:text="@string/current_end_date" />

        <EditText
            android:id="@+id/edtCurrentEndDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margin_small"/>
    </LinearLayout>
    <!--贷款有效期(开始)-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_small"
            android:text="@string/credit_length_start_date" />

        <EditText
            android:id="@+id/edtCreditLengthStartDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margin_small"/>
    </LinearLayout>
    <!--贷款有效期(结束)-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_small"
            android:text="@string/credit_length_end_date" />

        <EditText
            android:id="@+id/edtCreditLengthEndDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margin_small"/>

    </LinearLayout>
    <!--备注-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_small"
            android:text="@string/credit_comment" />

        <EditText
            android:id="@+id/edtComment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margin_small"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/view_size_1dp"
            android:layout_alignParentBottom="true"
            android:background="@color/gray_dark_alpha26" />
    </LinearLayout>

    <!--按钮-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_height"
            android:layout_weight="1"
            android:layout_marginTop="20dp"
            android:layout_marginRight="@dimen/margin_small"
            android:layout_marginLeft="@dimen/margin_small"
            android:text="@string/btn_save"/>
        <Button
            android:id="@+id/btnDelete"
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_height"
            android:layout_weight="1"
            android:layout_marginTop="20dp"
            android:layout_marginRight="@dimen/margin_small"
            android:layout_marginLeft="@dimen/margin_small"
            android:text="@string/btn_delete"/>

    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible"
        android:id="@+id/edtId"/>

</LinearLayout>