<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.creditinfo.AddCreditInfoFragment">

    <!--卡名-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_small"
            android:text="@string/credit_name" />

        <EditText
            android:id="@+id/edtCreditName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margin_small"/>
    </LinearLayout>

    <!--卡号-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_small"
            android:text="@string/credit_no" />

        <EditText
            android:id="@+id/edtCreditNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margin_small"/>
    </LinearLayout>
    <!--银行-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_small"
            android:text="@string/bank_name" />

        <EditText
            android:id="@+id/edtBankName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margin_small"/>
    </LinearLayout>
    <!--额度-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_small"
            android:text="@string/credit_limit" />

        <EditText
            android:id="@+id/edtCreditLimit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margin_small"/>
    </LinearLayout>
    <!--账单日-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_small"
            android:text="@string/statement_date" />

        <EditText
            android:id="@+id/edtStatmentDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margin_small"/>
    </LinearLayout>
    <!--还款日-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_small"
            android:text="@string/repayment_date" />

        <EditText
            android:id="@+id/edtRepaymentDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margin_small"/>
    </LinearLayout>
    <!--备注-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_small"
            android:text="@string/credit_comment" />

        <EditText
            android:id="@+id/edtComment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margin_small"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/view_size_1dp"
            android:layout_alignParentBottom="true"
            android:background="@color/gray_dark_alpha26" />
    </LinearLayout>
    <!--按钮-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_height"
            android:layout_weight="1"
            android:layout_marginTop="20dp"
            android:layout_marginRight="@dimen/margin_small"
            android:layout_marginLeft="@dimen/margin_small"
            android:text="@string/btn_save"/>

    </LinearLayout>

</LinearLayout>