<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.swiperecord.SwipeRecordAddFragment">

    <!--卡名-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_small"
            android:text="@string/credit_name" />

        <EditText
            android:id="@+id/edtCreditName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margin_small"/>
    </LinearLayout>

    <!--刷卡日期-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_small"
            android:text="@string/swipe_date" />

        <EditText
            android:id="@+id/edtSwipeDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margin_small"/>
    </LinearLayout>
    <!--金额-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_small"
            android:text="@string/swipe_amounts" />

        <EditText
            android:id="@+id/edtAmounts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margin_small"/>
    </LinearLayout>
    <!--商户-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_small"
            android:text="@string/vendor_name" />

        <EditText
            android:id="@+id/edtVendorName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margin_small"/>
    </LinearLayout>

    <!--备注-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_small"
            android:text="@string/comment" />

        <EditText
            android:id="@+id/edtComment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margin_small"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/view_size_1dp"
            android:layout_alignParentBottom="true"
            android:background="@color/gray_dark_alpha26" />
    </LinearLayout>

    <!--按钮-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_height"
            android:layout_weight="1"
            android:layout_marginTop="20dp"
            android:layout_marginRight="@dimen/margin_small"
            android:layout_marginLeft="@dimen/margin_small"
            android:text="@string/btn_save"/>
        <Button
            android:id="@+id/btnDelete"
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_height"
            android:layout_weight="1"
            android:layout_marginTop="20dp"
            android:layout_marginRight="@dimen/margin_small"
            android:layout_marginLeft="@dimen/margin_small"
            android:text="@string/btn_delete"/>

    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible"
        android:id="@+id/hidId"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible"
        android:id="@+id/hidCardId"/>

</LinearLayout>